ubah login ke masuk, ubah text h1, ubah bg pembungkus pelajaran

--- a/index.html
+++ b/index.html
@@ -1,123 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Kedua</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="css/bootstrap-icons.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="css/bootstrap-icons.css" />
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <div class="header-kiri">
-                <img src="logo.png" class="logo">
-            </div>
-            <div class="header-kanan">
-                <a href="#" class="login">Log in</a>
-            </div>
-            <span class="bi bi-list menu-icon"></span>
-        </div>  
+      <div class="container">
+        <div class="header-kiri">
+          <img src="logo.png" class="logo" />
+        </div>
+        <div class="header-kanan">
+          <a href="#" class="login">Masuk</a>
+        </div>
+        <span class="bi bi-list menu-icon"></span>
+      </div>
     </header>
     <div class="pembungkus-atas">
-        <div class="container">
-            <h1>BELAJAR CODING</h1>
-            <h1>BELAJAR MENJADI LEBIH KREATIF</h1>
-            <p>Kans adalah kelompok belajar pemograman khusus SMKN 3 PALU</p>
-            <p>Kami menawarkan pembelajaran pemograman dasar yang lengkap untuk mempermudah kamu memuslai.</p>
+      <div class="container">
+        <h1>BELAJAR DI KANS</h1>
+        <h1>BELAJAR MENJADI LEBIH KREATIF</h1>
+        <p>Kans adalah kelompok belajar pemograman khusus SMKN 3 PALU</p>
+        <p>
+          Kami menawarkan pembelajaran pemograman dasar yang lengkap untuk
+          mempermudah kamu memuslai.
+        </p>
 
-            <div class="pembungkus-tombol">
-                <a href="#" class="tombol email"><i class="bi bi-envelope"></i> Daftar dengan Email</a>
-                <p>atau</p>
-                <a href="#" class="tombol facebook"><i class="bi bi-facebook"></i> Daftar dengan Facebook</a>
-                <a href="#" class="tombol instagram"><i class="bi bi-instagram"></i> Daftar dengan Instagram</a>
-            </div>
-
+        <div class="pembungkus-tombol">
+          <a href="#" class="tombol email"
+            ><i class="bi bi-envelope"></i> Daftar dengan Email</a
+          >
+          <p>atau</p>
+          <a href="#" class="tombol facebook"
+            ><i class="bi bi-facebook"></i> Daftar dengan Facebook</a
+          >
+          <a href="#" class="tombol instagram"
+            ><i class="bi bi-instagram"></i> Daftar dengan Instagram</a
+          >
         </div>
+      </div>
     </div>
     <div class="pembungkus-pelajaran">
-        <div class="container">
-            <div class="judul">
-                <h2>Cari tau dari mana anda memulai</h2>
-            </div>
-            <div class="pelajaran">
-                <div class="materi">
-                    <div class="materi-icon">
-                        <img src="img/html.png">
-                        <p>HTML</p>
-                    </div>
-                    <p class="materi-text">Bahasa yang digunakan untuk membuat dan mendesain tampilan situs web Anda. </p>
-                </div>
-            </div>
-
-            <div class="pelajaran">
-                <div class="materi">
-                    <div class="materi-icon">
-                        <img src="img/ruby.png">
-                        <p>Ruby</p>
-                    </div>
-                    <p class="materi-text">Bahasa dinamis, serba guna yang sederhana dan produktif. Ruby sering digunakan untuk membuat aplikasi web yang responsive.
-                    </p>
-                </div>
-            </div>
-            <div class="pelajaran">
-                <div class="materi">
-                    <div class="materi-icon">
-                        <img src="img/jQuery.png">
-                        <p>jQuery</p>
-                    </div>
-                    <p class="materi-text">Library JavaScript yang cepat, kaya akan fitur, dan mudah digunakan yang menangani animasi dan permintaan Ajax.
-                    </p>
-                </div>
-            </div>
-            <div class="pelajaran">
-                <div class="materi">
-                    <div class="materi-icon">
-                        <img src="img/php.png">
-                        <p>PHP</p>
-                    </div>
-                    <p class="materi-text">Bahasa skrip open source yang dapat disematkan ke dalam HTML, dan cocok untuk pengembangan web.
-                    </p>
-                </div>
-            </div>
-            <div class="clear"></div>
+      <div class="container">
+        <div class="judul">
+          <h2>Cari tau dari mana anda memulai</h2>
         </div>
+        <div class="pelajaran">
+          <div class="materi">
+            <div class="materi-icon">
+              <img src="img/html.png" />
+              <p>HTML</p>
+            </div>
+            <p class="materi-text">
+              Bahasa yang digunakan untuk membuat dan mendesain tampilan situs
+              web Anda.
+            </p>
+          </div>
+        </div>
+
+        <div class="pelajaran">
+          <div class="materi">
+            <div class="materi-icon">
+              <img src="img/ruby.png" />
+              <p>Ruby</p>
+            </div>
+            <p class="materi-text">
+              Bahasa dinamis, serba guna yang sederhana dan produktif. Ruby
+              sering digunakan untuk membuat aplikasi web yang responsive.
+            </p>
+          </div>
+        </div>
+        <div class="pelajaran">
+          <div class="materi">
+            <div class="materi-icon">
+              <img src="img/jQuery.png" />
+              <p>jQuery</p>
+            </div>
+            <p class="materi-text">
+              Library JavaScript yang cepat, kaya akan fitur, dan mudah
+              digunakan yang menangani animasi dan permintaan Ajax.
+            </p>
+          </div>
+        </div>
+        <div class="pelajaran">
+          <div class="materi">
+            <div class="materi-icon">
+              <img src="img/php.png" />
+              <p>PHP</p>
+            </div>
+            <p class="materi-text">
+              Bahasa skrip open source yang dapat disematkan ke dalam HTML, dan
+              cocok untuk pengembangan web.
+            </p>
+          </div>
+        </div>
+        <div class="clear"></div>
+      </div>
     </div>
     <div class="pembungkus-media">
-        <div class="container">
-            <h1>HTML multimedia</h1>
-            <div class="media">
-                <video src="video/op kans shippuden.mp4" controls></video>
-            </div>
-            <div class="media">
-                <p>ayam</p>
-                <audio src="audio/ayam.wav" controls></audio>
-                <p>game</p>
-                <audio src="audio/game.wav" controls></audio>
-                <p>kucing</p>
-                <audio src="audio/kucing.wav" controls></audio>
-                <p>naruto</p>
-                <audio src="audio/naturo.mp3" controls></audio>
-            </div>
-            <div class="clear"></div>
+      <div class="container">
+        <h1>HTML multimedia</h1>
+        <div class="media">
+          <video src="video/op kans shippuden.mp4" controls></video>
         </div>
+        <div class="media">
+          <p>ayam</p>
+          <audio src="audio/ayam.wav" controls></audio>
+          <p>game</p>
+          <audio src="audio/game.wav" controls></audio>
+          <p>kucing</p>
+          <audio src="audio/kucing.wav" controls></audio>
+          <p>naruto</p>
+          <audio src="audio/naturo.mp3" controls></audio>
+        </div>
+        <div class="clear"></div>
+      </div>
     </div>
     <div class="message-wrapper">
-        <div class="container">
-            <div class="heading">
-                <h3>Apakah anda siap untuk menjadi programer yang handal?</h3>
-                <h2>Ayo belajar coding, ayo belajar menjadi lebih kreatif </h2>
-            </div>
-            <span class="btn message">Mulai Belajar</span>
+      <div class="container">
+        <div class="heading">
+          <h3>Apakah anda siap untuk menjadi programer yang handal?</h3>
+          <h2>Ayo belajar coding, ayo belajar menjadi lebih kreatif</h2>
         </div>
+        <span class="btn message">Mulai Belajar</span>
+      </div>
     </div>
     <footer>
-        <div class="container">
-            <img src="logo.png">
-            <p>Perubahan, Peluang, Harapan.</p>
-        </div>
+      <div class="container">
+        <img src="logo.png" />
+        <p>Perubahan, Peluang, Harapan.</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
