tambah link tombol

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         </p>
 
         <div class="pembungkus-tombol">
-          <a href="#" class="tombol email"
+          <a href="https://mail.google.com/" class="tombol email"
             ><i class="bi bi-envelope"></i> Daftar dengan Email</a
           >
           <p>atau</p>
-          <a href="#" class="tombol facebook"
+          <a href="https://facebook.com/" class="tombol facebook"
             ><i class="bi bi-facebook"></i> Daftar dengan Facebook</a
           >
-          <a href="#" class="tombol instagram"
+          <a href="https://instagram.com/" class="tombol instagram"
             ><i class="bi bi-instagram"></i> Daftar dengan Instagram</a
           >
         </div>
